--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     </li>
                     
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
 
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/coming-soon.html">Blogs</a>
+                        <a class="nav-link" href="/coming-soon">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/contact-us.html">Contact Us</a>
+                        <a class="nav-link" href="/contact-us">Contact Us</a>
                     </li>
             </div>
         </div>
