--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <body style="background-color: #17202A;">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand head-text" href="/">TECH TIPS BY ABHIJITH</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
@@ -38,22 +38,23 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item head-text1">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    
+                    <li class="nav-item head-text1">
+                        <a class="nav-link" href="/about">About</a>
                     </li>
 
                     <li class="nav-item head-text1">
-                        <a class="nav-link active" href="/about.html">About</a>
-                    </li>
-
-                    <li class="nav-item head-text1">
-                        <a class="nav-link" href="/coming-soon.html">Blogs</a>
+                        <a class="nav-link" href="/coming-soon">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/contact-us.html">Contact Us</a>
+                        <a class="nav-link" href="/contact-us">Contact Us</a>
                     </li>
             </div>
         </div>
     </nav>
+
 
 
     <div class="container-fluid">
