--- a/contact-us.html
+++ b/contact-us.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item head-text1">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     
                     <li class="nav-item head-text1">
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="/coming-soon">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/contact-us">Contact Us</a>
+                        <a class="nav-link active" href="/contact-us">Contact Us</a>
                     </li>
             </div>
         </div>
