--- a/coming-soon.html
+++ b/coming-soon.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item head-text1">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     
                     <li class="nav-item head-text1">
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/coming-soon">Blogs</a>
+                        <a class="nav-link active" href="/coming-soon">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
                         <a class="nav-link" href="/contact-us">Contact Us</a>
