--- a/contact-us.html
+++ b/contact-us.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7155726402686855"
+     crossorigin="anonymous"></script>
         <link rel="icon" href="images/logo.png" type="image/icon type">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap CSS -->
