--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+<meta data-n-head="1" itemprop="description" content="A Youtuber">
+  <meta data-n-head="1" itemprop="image" content="images/logo.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7155726402686855"
      crossorigin="anonymous"></script>
     <link rel="icon" href="images/logo.png" type="image/icon type">
