--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  
 <head>
+<meta name="keywords" content="TECHTIPSBYABHIJITH, YOUTUBER, HANDCODED, ASIANET, CODING, HTML, CSS, JAVASCRIPT, KTH SMP, KIDJUDE GAMING, BVB, TECH CRAFT GAMING BY HARI, SUBSCRIBE">
 <meta data-n-head="1" itemprop="description" content="A Youtuber">
   <meta data-n-head="1" itemprop="image" content="images/logo.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7155726402686855"
