--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
 
         <div class="un">
             <center>
-                <h1>The Page Was Unavailable</h1>
+                <h1>The Page Not Found</h1>
             </center>
             
     <a class="btn-back btn-back1" style="color: black;" href="/">Back To Home</a>
