--- a/form-submitted.html
+++ b/form-submitted.html
@@ -54,30 +54,37 @@
             </div>
         </div>
     </nav>
-
-        <h1></h1>
-
-
-    <footer>
-        <div class="footer-background">
-           <div class="footer-text">
+<center><img src="images/tick.png" alt="Tick Mark" class="tick"></center>
+     <center><h1 class="formsir">YOUR FORM SUBIMMITED SUCCESSFULLY</h1></center>   
 
 
+     <footer style="background-color: #2c292f; margin-top: 68px;">
+        <div class="container">
+            <div class="row">
 
-           </div>
-            <p>
-            <div class="copy-text">
-                <h6 class="mb-0">
-                    &copy; 2020 -
-                    <script>document.write(new Date().getFullYear());</script> TECH TIPS BY ABHIJITH
-                    </p>
+                <div class="footer-background">
+                    <div class="footer-text">
+
+
+                    </div>
+                    <p>
+
+                        <center><i class="fas fa-mail-bulk"></i><a href="mailto:contactmailtech@gmail.com"
+                                class="mail">Contactmailtech@gmail.com</a></center>
+                    <div class="copy-text">
+                        <h6 class="mb-0 ">
+                            &copy; 2020 -
+                            <script>document.write(new Date().getFullYear());</script> TECH TIPS BY ABHIJITH
+                            </p>
+
+
+                    </div>
+
+                </div>
 
 
             </div>
-
         </div>
-
-
 
 
     </footer>
@@ -88,3 +95,4 @@
     crossorigin="anonymous"></script>
 
 </html>
+
