--- a/contact-us.html
+++ b/contact-us.html
@@ -166,7 +166,7 @@
                 success: function (response) {
                     alert("Your Form Is Successfully Sended")
                     window.location.reload()
-                    //window.location.href="https://google.com"
+                    window.location.href="https://techtipsyt.in/form-submitted"
                 },
                 error: function (err) {
                     alert("Oh SomeError Occured Try Again Later")
