--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <center>
                 <h1 class="tech col-sm-3" style="color: aqua;">About Me</h1>
             </center>
-            <img src="https://scontent.fcok10-2.fna.fbcdn.net/v/t39.30808-6/255459992_1082845989123968_3502106715437290445_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=730e14&_nc_ohc=488Ea8vfiAUAX-9G4GX&_nc_ht=scontent.fcok10-2.fna&oh=00_AT8OfTV3KgB2ZmPRnfp6Y0dAi3JmB_CH3Y_HGaXy3YMH2Q&oe=62048C4A"
+            <img src="images/techimage.jpg"
                 alt="ABHIJITH" class="about-image img-thumbnail" style=" padding: 3px;">
 
         </div>
