--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta data-n-head="1" data-hid="mobile-web-app-capable" name="mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
     <meta og:title content="HOME - TECH TIPS BY ABHIJITH">
-    <meta og:image content="images/logo.png">
+    <meta property="og:image" content="images/logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta data-n-head="1" name="application-name" content="TECH TIPS BY ABHIJITH">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable= no ">
