--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="keywords" content="TECHTIPSBYABHIJITH, YOUTUBER, HANDCODED, ASIANET, CODING, HTML, CSS, JAVASCRIPT, KTH SMP, KIDJUDE GAMING, BVB, TECH CRAFT GAMING BY HARI, SUBSCRIBE">
 <meta data-n-head="1" itemprop="description" content="A Youtuber">
-  <meta data-n-head="1" itemprop="image" content="images/logo.png">
+  <meta data-n-head="1" itemprop="image" content="https://techtipsyt.in/images/logo.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7155726402686855"
      crossorigin="anonymous"></script>
     <link rel="icon" href="images/logo.png" type="image/icon type">
@@ -21,7 +21,7 @@
     <meta data-n-head="1" data-hid="mobile-web-app-capable" name="mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
     <meta og:title content="HOME - TECH TIPS BY ABHIJITH">
-    <meta property="og:image" content="images/logo.png">
+    <meta property="og:image" content="https://techtipsyt.in/images/logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta data-n-head="1" name="application-name" content="TECH TIPS BY ABHIJITH">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable= no ">
