--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
 <head>
 <meta name="keywords" content="TECHTIPSBYABHIJITH, YOUTUBER, HANDCODED, ASIANET, CODING, HTML, CSS, JAVASCRIPT, KTH SMP, KIDJUDE GAMING, BVB, TECH CRAFT GAMING BY HARI, SUBSCRIBE">
 <meta data-n-head="1" itemprop="description" content="A Youtuber">
@@ -58,6 +58,7 @@
         </div>
     </nav>
 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
     <div class="latest-video">
         <center>
             <h1 class="latest-title">LATEST VIDEO</h1>
@@ -99,12 +100,14 @@
                             <script>document.write(new Date().getFullYear());</script> TECH TIPS BY ABHIJITH
                             </p>
 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
 
                     </div>
 
                 </div>
 
 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
             </div>
         </div>
 
@@ -120,3 +123,16 @@
     crossorigin="anonymous"></script>
 
 </html>
+
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
+ 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
+ 
+ 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
+ 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
+ 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
+ 
+ <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
