--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                     <p>
                         <center><i class="fas fa-mail-bulk"></i>><a href="mailto:contactmailtech@gmail.com"
-                                class="mail">Contactmailtech@gmail.com</a></center>
+                                class="mail">support@techtipsyt.in</a></center>
                     <div class="copy-text">
                         <h6 class="mb-0 ">
                             &copy; 2020 -
