--- a/coming-soon.html
+++ b/coming-soon.html
@@ -71,9 +71,9 @@
 
                    
                     </div>
-                    <p>
+                   <p>
                         <center><i class="fas fa-mail-bulk"></i>><a href="mailto:contactmailtech@gmail.com"
-                                class="mail">Contactmailtech@gmail.com</a></center>
+                                class="mail">support@techtipsyt.in</a></center>
                     <div class="copy-text">
                         <h6 class="mb-0 ">
                             &copy; 2020 -
