--- a/404.html
+++ b/404.html
@@ -83,9 +83,9 @@
 
 
                     </div>
-                   <p>
-                        <center><i class="fas fa-mail-bulk"></i>><a href="mailto:contactmailtech@gmail.com"
-                                class="mail">support@techtipsyt.in</a></center>
+                          <p>
+                        <center><i class="fas fa-mail-bulk"></i>><a href="mailto:support@techtipsyt.in"
+                                class="mail">Support@techtipsyt.in</a></center>
                     <div class="copy-text">
                         <h6 class="mb-0 ">
                             &copy; 2020 -
