--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <title>HOME - TECH TIPS BY ABHIJITH</title>
 </head>
 
+ 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <body style="background-color: #17202A;">
 
     <!-- Navbar -->
@@ -66,8 +68,8 @@
     </div>
     <hr class="hr">
     <section>
-      <center><iframe class="latest-videos" width="560" height="315"
-                src="https://www.youtube.com/embed/qgq9LIGtIJ8?autoplay=1&cc_load_policy=1&controls=1&fs=0&loop=1&mute=1?latest"
+      <center><iframe class="latest-videos " width="560" height="315"
+                vnum='0' cid="UCs6MVXbmYH1M67-pvzr8rcQ"
                 title="New Video" frameborder="0" allow="autoplay;" allowfullscreen></iframe></center>
     </section>
     <div class="sub-text">
