--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
 <head>
+ <script src="js/index.js"></script>
 <meta name="keywords" content="TECHTIPSBYABHIJITH, YOUTUBER, HANDCODED, ASIANET, CODING, HTML, CSS, JAVASCRIPT, KTH SMP, KIDJUDE GAMING, BVB, TECH CRAFT GAMING BY HARI, SUBSCRIBE">
 <meta data-n-head="1" itemprop="description" content="A Youtuber">
   <meta data-n-head="1" itemprop="image" content="https://techtipsyt.in/images/logo.png">
@@ -68,7 +69,7 @@
     </div>
     <hr class="hr">
     <section>
-      <center><iframe class="latest-videos " width="560" height="315"
+      <center><iframe class="latest-videos latestVideoEmbed" width="560" height="315"
                 vnum='0' cid="UCs6MVXbmYH1M67-pvzr8rcQ"
                 title="New Video" frameborder="0" allow="autoplay;" allowfullscreen></iframe></center>
     </section>
