--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <center><iframe class="latest-videos latestVideoEmbed" width="560" height="315"
                 vnum='0' cid="UCs6MVXbmYH1M67-pvzr8rcQ"
                 title="New Video" frameborder="0" allow="autoplay;" allowfullscreen></iframe></center>
+     <script></script>
     </section>
     <div class="sub-text">
         <center>
