--- a/index.html
+++ b/index.html
@@ -72,7 +72,27 @@
       <center><iframe class="latest-videos latestVideoEmbed" width="560" height="315"
                 vnum='0' cid="UCs6MVXbmYH1M67-pvzr8rcQ"
                 title="New Video" frameborder="0" allow="autoplay;" allowfullscreen></iframe></center>
-     <script></script>
+     <script>//Main Video Loading Context
+
+var reqURL = "https://api.rss2json.com/v1/api.json?rss_url=" + encodeURIComponent("https://www.youtube.com/feeds/videos.xml?channel_id=");
+function loadVideo(iframe) {
+  $.getJSON(reqURL + iframe.getAttribute('cid'),
+    function(data) {
+      var videoNumber = (iframe.getAttribute('vnum') ? Number(iframe.getAttribute('vnum')) : 0);
+      console.log(videoNumber);
+      var link = data.items[videoNumber].link;
+      id = link.substr(link.indexOf("=") + 1);
+      iframe.setAttribute("src", "https://youtube.com/embed/" + id + "?controls=0&autoplay=1");
+    }
+  );
+}
+var iframes = document.getElementsByClassName('latestVideoEmbed');
+for (var i = 0, len = iframes.length; i < len; i++) {
+  loadVideo(iframes[i]);
+}
+
+// End Main Video Loading Context
+     </script>
     </section>
     <div class="sub-text">
         <center>
