--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/coming-soon.">Blogs</a>
+                        <a class="nav-link" href="https://blog.techtipsyt.in/">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
                         <a class="nav-link" href="/contact-us">Contact Us</a>
