--- a/form-submitted.html
+++ b/form-submitted.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item head-text1">
-                        <a class="nav-link" href="/coming-soon">Blogs</a>
+                        <a class="nav-link" href="https://blog.techtipsyt.in/">Blogs</a>
                     </li>
                     <li class="nav-item head-text1">
                         <a class="nav-link active" href="/contact-us">Contact Us</a>
