--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <!--*/ Copyright Code By Tech Tips By Abhijith*/-->
 <head>
+  <meta http-equiv="Refresh" content="0; URL=https://www.techtipsyt.in/">
  <script src="js/index.js"></script>
 <meta name="keywords" content="TECHTIPSBYABHIJITH, YOUTUBER, HANDCODED, ASIANET, CODING, HTML, CSS, JAVASCRIPT, KTH SMP, KIDJUDE GAMING, BVB, TECH CRAFT GAMING BY HARI, SUBSCRIBE">
 <meta data-n-head="1" itemprop="description" content="A Youtuber">
